Fixed the overlay issue when trying to add more than one log.
When you try and add more than one log, then the elements will shift right, off-center the add log pop-up, this bug is now resolved.

--- a/src/scripts/main/public/styles/code-log.css
+++ b/src/scripts/main/public/styles/code-log.css
@@ -311,9 +311,9 @@ button.frame {
     font-size: 20px;
 }
 
-/*.hidden {
+.hidden {
     display: none;
-}*/
+}
 
 .placeholder-text {
     padding: 2px;
